# devilplugs

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
src/XjTF/: PluginProcessor.cpp  PluginProcessor.h  TransformerWDF.h
src/XjTFL/: PluginProcessor.cpp  PluginProcessor.h  TransformerCore.h
